Correct dark mode styles

--- a/css/reloj.css
+++ b/css/reloj.css
@@ -153,7 +153,10 @@ a:hover{
     background-color: #fff;
     color: #1f1e1e;
 }
-.active-dark.link{
+.active-dark.time, .active-dark.date{
+    background-color: transparent;
+}
+.active-dark.author, .active-dark.link{
     color: #fff;
     background-color: transparent;
 }
